--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="checkout.Pages.MainPage"
              Title="下单">
 
@@ -111,7 +112,7 @@
         </HorizontalStackLayout>
         
         <Editor x:Name="logContent" VerticalTextAlignment="Start" MinimumHeightRequest="300" Text="{Binding LogContent}" />
-
+        
     </VerticalStackLayout>
 
 
